# sec-10k-extractor

./: .dockerignore  .env.example  .gitignore  ANALYSIS.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.claude/: CLAUDE.md
api/: security.py  server.py  test_api.py
docs/: 00-research-agenda.md  01-edgar-access-and-formats.md  02-opensource-tools-landscape.md  03-sota-segmentation-and-eval.md  04-format-variance-taxonomy.md  05-cost-latency-scalability.md  06-confidence-and-silent-failure.md  07-ixbrl-structure-exploitation.md  08-eval-set-construction.md  09-frontend-ux.md  10-pipeline-architecture.md  11-segmentation-methods.md  12-faithfulness-consistency.md  13-calibration-and-decoding.md  14-financial-nlp.md  15-llm-as-judge.md  16-eval-frameworks-and-rigor.md  17-agentic-evals-workshop.md  INDEX.md  deploy-zeabur.md
eval/: boundary_gold.json  build_boundary_gold.py  classification_gold.json  collect_accessions.py  collect_sweep2.py  edgar_corpus_spike.md  edgar_corpus_spike.py  eval_set.json  g9.py  llm_measure.py  report.md  run_eval.py  structural_sweep.py  sweep2_accessions.txt  sweep2_report.md  sweep3_accessions.txt  sweep3_report.md  sweep_accessions.txt  sweep_census.md  sweep_clusters.py  sweep_fail_tail.py  sweep_report.md
prompts/: 2026-06-22-170728-research-loop-grounding-mission.md  2026-06-22-180121-build-and-gate-test-10k-expert-index-skill.md  2026-06-22-180919-extract-design-impl-verification-principles-to-claudemd.md  2026-06-22-191046-design-planning-with-review-gate-and-grill.md  2026-06-26-072645-rerun-server-show-eval-set.md  (+30 more)
(+89 files in other folders)
