[project]
name = "sec10k"
version = "0.1.0"
description = "Item-level structured extraction from SEC 10-K filings"
requires-python = ">=3.11"
dependencies = ["edgartools>=5.16"]

[project.optional-dependencies]
dev = ["pytest>=8"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["sec10k*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
