[project]
name = "sec10k"
version = "0.1.0"
description = "Item-level structured extraction from SEC 10-K filings"
requires-python = ">=3.11"
dependencies = ["edgartools==5.40.0"]  # pinned: the canonical text (hence frozen char-gold offsets) depends on edgartools' rendering; an unpinned range silently drifts boundaries

[project.optional-dependencies]
dev = ["pytest>=8", "httpx>=0.27"]
api = ["fastapi>=0.110", "uvicorn[standard]>=0.29"]
llm = ["github-copilot-sdk>=1.0.2"]  # real escalation tier; optional -- absent => deferred fallback

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["sec10k*", "api*"]

[tool.pytest.ini_options]
testpaths = ["tests", "api"]
